Support venv for directory of subprojects
Instead of requiring a /src/requirements.txt or
/src/{PROJECT_NAME}/requirements.txt, have the option to look for the
requirements file in each subdirectory under /src.  That allows for this
to work with multiple-module projects.

--- a/sublime-ide-python/Dockerfile
+++ b/sublime-ide-python/Dockerfile
@@ -16,6 +16,8 @@ RUN curl -s -o /tmp/anaconda.tgz https://codeload.github.com/DamnWidget/anaconda
 # - python-in-docker is used by Anaconda plugin in Sublime Text 3
 COPY python-in-docker.sh /bin/python-in-docker
 RUN chmod 755 /bin/python-in-docker
+COPY unittest-in-docker.sh /bin/unittest-in-docker
+RUN chmod 755 /bin/unittest-in-docker
 COPY entry.sh /bin/docker-entry
 RUN chmod 755 /bin/docker-entry
 
