Moved serverless working directory to avoid conflicts
Using /root as the mount point for the serverless project directory is
not good since the /root/.aws directory created within the container
will appear in the serverless project afterwards.

--- a/serverless/Dockerfile
+++ b/serverless/Dockerfile
@@ -7,6 +7,6 @@ RUN yarn global add serverless@1.41.1
 
 # To run the 'sls' command from the host via this Docker container, create 
 # the alias:
-# alias sls='docker run --rm -v $HOME/.aws/config:/root/.aws/credentials -v $PWD:/root martian111/serverless'
-WORKDIR /root
+# alias sls='docker run --rm -v $HOME/.aws/config:/root/.aws/credentials -v $PWD:/src martian111/serverless'
+WORKDIR /src
 ENTRYPOINT ["serverless"]
