Added serverless support for 'python3.6' runtime in AWS
To use this, source the serverless-bash.sh script in .bash_profile,
which will provide the 'sls' command/function in Bash. That function
will run the correct Docker container based on the runtime configured in
the serverless.yml file (sls command must be run from the root directory
of the serverless project).

--- a/serverless/Dockerfile
+++ b/serverless/Dockerfile
@@ -5,8 +5,9 @@ FROM node:12-alpine
 # Ref:  https://github.com/jch254/docker-node-serverless
 RUN yarn global add serverless@1.41.1
 
-# To run the 'sls' command from the host via this Docker container, create 
-# the alias:
-# alias sls='docker run --rm -v $HOME/.aws/config:/root/.aws/credentials -v $PWD:/src martian111/serverless'
+# To run the 'sls' command from the host via this Docker container, source the 
+# serverless-bash.sh script from your .bash_profile script.  That will run the
+# correct Docker container (this or other ones in this repository) based on the
+# runtime configured in the serverless.yml file.
 WORKDIR /src
 ENTRYPOINT ["serverless"]
